# Agent_template

./: .gitignore  .pdm-python  .pdm.toml  =2.0  README.md  pyproject.toml
app/: client.ipynb  routes.py  server.py  utils.py
core/: __init__.py  agent_call.py  config.py  model.py  schemas.py  tools.py
core/adapters/chat_history/: file_history.py
core/agents/: __init__.py
core/agents/genie_agent/: genie.py  prompt.py
core/agents/pirate_agent/: pirate.py  prompt.py
